--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
     <title>Empório Natural</title>
     <link rel="stylesheet" href="style.css">
     <link rel="shortcut icon" href="" type="image/x-icon">
+
+    
+
 </head>
 <body>
     <header class="topo">
@@ -30,30 +33,48 @@
              E, para aqueles com dificuldade em seguir um protocolo mais rígido de dieta, a opção é suplementar os nutrientes faltantes com produtos de qualidade. <br>
              Com o objetivo de ajudar os nossos clientes ter uma vida mais saudável, na loja Empório Natural você pode encontrar produtos de qualidade, <br>
              provando que não é preciso muito para ser saudável, é preciso do certo</p><br>
-            <section>
-                <h2  class="title-median">Vitaminas</h2>
-                <div class="product-container">
-                    <div class="sessions">
-                        <img class="sessions-image" src="imagens/vitamina-5.png" alt="vitaminas">
-                    </div>
-                <h2 class="title-median">Chás</h2>
-                    <div class="sessions">
-                        <img class="sessions-image"src="imagens/chas.png" alt="chás">
-                    </div>
-                <h2 class="title-median">Temperos</h2>
-                    <div class="sessions">
-                        <img  class="sessions-image"src="imagens/temperos.png" alt="temperos">
-                    </div>
-                <h2 class="title-median">Grãos</h2>
-                    <div class="sessions">
-                        <img class="sessions-image" src="imagens/grãos.png" alt="grãos">
-                    </div>
-                <h2 class="title-median">Suplementos</h2>
-                    <div class="sessions"> 
-                        <img  class="sessions-image"src="imagens/suplemento-4.png" alt="suplementos">
+            <div class="product-container">
+                <div class="product">
+                    <strong class="product-title"> SUPLEMENTOS</strong>
+                    <img class="product-image" src="imagens/suplementos.gif" alt="Suplementos"> 
+                    <div class="product-button">
+                        <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
-            </section>
+
+                <div class="product">
+                    <strong class="product-title"> CHÁS</strong>
+                    <img class="product-image" src="imagens/chas.png" alt="Chás"> 
+                    <div class="product-button">
+                        <button class="button" type="button">Conheça mais</button>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <strong class="product-title">TEMPEROS</strong>
+                    <img class="product-image" src="imagens/temperos.png" alt="Temperos"> 
+                    <div class="product-button">
+                        <button class="button" type="button">Conheça mais</button>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <strong class="product-title"> GRÃOS</strong>
+                    <img class="product-image" src="imagens/grãos.png" alt="Grãos"> 
+                    <div class="product-button">
+                        <button class="button" type="button">Conheça mais</button>
+                    </div>
+                </div>
+
+                <div class="product">
+                    <strong class="product-title">OLÉOS ESSENCIAIS</strong>
+                    <img class="product-image" src="imagens/oleos.gif" alt="oleos"> 
+                    <div class="product-button">
+                        <button class="button" type="button">Conheça mais</button>
+                    </div>
+                </div>
+
+            </div>
     </main>
 
 <footer>
