--- a/index.html
+++ b/index.html
@@ -15,24 +15,31 @@
 <body>
     <header class="topo">
         <nav class="navegacao">
-            <a href="index.html"><img src="icone.png"alt="logo" height="100" width="100"></a> 
-        <ul class="menu">
-            <li class="nav-item">Home</li>
-            <li class="nav-item">Produtos</li>
-            <li class="nav-item">Cupons</li>
-            <li class="nav-item">Carrinho</li>
-            <li class="nav-item">Cadastre-se</li>
-    </ul>    
+            <a href="index.html"><img src="imagens/logo.png"alt="logo" height="100" width="100"></a> 
          </nav>
     </header>
 
     <main>
-        <h1 class="title-large">Produtos naturais que combinam  bem-estar e cuidado pessoal!</h1>
-        <p class="text"><strong >Cuide do seu corpo de forma natural e saudável!</strong> <br>
-            A Mais uma vez, a alimentação adequada se mostra como a chave para garantir saúde e bem estar. <br>
-             E, para aqueles com dificuldade em seguir um protocolo mais rígido de dieta, a opção é suplementar os nutrientes faltantes com produtos de qualidade. <br>
-             Com o objetivo de ajudar os nossos clientes ter uma vida mais saudável, na loja Empório Natural você pode encontrar produtos de qualidade, <br>
-             provando que não é preciso muito para ser saudável, é preciso do certo</p><br>
+        <ul class="menu">
+            <li class="nav-item">
+                <a href="produtos.html">Produtos</a></li>
+            <li class="nav-item">
+                <a href="cupons.html">Cupons</a>
+            </li>
+            <li class="nav-item">
+               <a href="carrinho.html"> Carrinho</a>
+            </li>
+            <li class="nav-item">
+                <a href="cadastro.html">Cadastre-se</a>
+            </li>
+        </ul>
+
+        <p class="text"><strong >CUIDE DO SEU CORPO NATURAL E SAUDÁVEL!</strong> <br>
+           <p class="text-large">Uma alimentação adequada se mostra como a chave para garantir saúde e bem estar e, para aqueles com dificuldade em seguir um protocolo mais rígido de dieta,<br>
+            a opção é suplementar os nutrientes faltantes com produtos de qualidade.Com o objetivo de ajudar os nossos clientes ter uma vida mais saudável, na loja Empório Natural <br>
+            você pode encontrar produtos de qualidade, provando que não é preciso muito para ser saudável, apenas dê o primeiro passo!</p> 
+           
+
             <div class="product-container">
                 <div class="product">
                     <strong class="product-title"> SUPLEMENTOS</strong>
