--- a/carrinho.html
+++ b/carrinho.html
@@ -22,15 +22,15 @@
     <main>
         <ul class="menu">
             <li class="nav-item">
-                <a href="produtos.html">Produtos</a></li>
+                <a class="link" href="produtos.html">Produtos</a></li>
             <li class="nav-item">
-                <a href="cupons.html">Cupons</a>
+                <a class="link" href="cupons.html">Cupons</a>
             </li>
             <li class="nav-item">
-               <a href="carrinho.html"> Carrinho</a>
+               <a class="link" href="carrinho.html"> Carrinho</a>
             </li>
             <li class="nav-item">
-                <a href="cadastro.html">Cadastre-se</a>
+                <a class="link" href="cadastro.html">Cadastre-se</a>
             </li>
         </ul>
 
