--- a/index.html
+++ b/index.html
@@ -40,43 +40,43 @@
             você pode encontrar produtos de qualidade, provando que não é preciso muito para ser saudável, apenas dê o primeiro passo!</p> 
            
 
-            <div class="product-container">
-                <div class="product">
-                    <strong class="product-title"> SUPLEMENTOS</strong>
-                    <img class="product-image" src="imagens/suplementos.gif" alt="Suplementos"> 
-                    <div class="product-button">
+            <div class="evidence-container">
+                <div class="evidence">
+                    <strong class="evidence-title"> SUPLEMENTOS</strong>
+                    <img class="evidence-image" src="imagens/suplementos.gif" alt="Suplementos"> 
+                    <div class="evidence-button">
                         <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
 
-                <div class="product">
-                    <strong class="product-title"> CHÁS</strong>
-                    <img class="product-image" src="imagens/chas.png" alt="Chás"> 
-                    <div class="product-button">
+                <div class="evidence">
+                    <strong class="evidence-title"> CHÁS</strong>
+                    <img class="evidence-image" src="imagens/chas.png" alt="Chás"> 
+                    <div class="evidence-button">
                         <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
 
-                <div class="product">
-                    <strong class="product-title">TEMPEROS</strong>
-                    <img class="product-image" src="imagens/temperos.png" alt="Temperos"> 
-                    <div class="product-button">
+                <div class="evidence">
+                    <strong class="evidence-title">TEMPEROS</strong>
+                    <img class="evidence-image" src="imagens/temperos.png" alt="Temperos"> 
+                    <div class="evidence-button">
                         <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
 
-                <div class="product">
-                    <strong class="product-title"> GRÃOS</strong>
-                    <img class="product-image" src="imagens/grãos.png" alt="Grãos"> 
-                    <div class="product-button">
+                <div class="evidence">
+                    <strong class="evidence-title"> GRÃOS</strong>
+                    <img class="evidence-image" src="imagens/grãos.png" alt="Grãos"> 
+                    <div class="evidence-button">
                         <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
 
-                <div class="product">
-                    <strong class="product-title">OLÉOS ESSENCIAIS</strong>
-                    <img class="product-image" src="imagens/oleos.gif" alt="oleos"> 
-                    <div class="product-button">
+                <div class="evidence">
+                    <strong class="evidence-title">OLÉOS ESSENCIAIS</strong>
+                    <img class="evidence-image" src="imagens/oleos.gif" alt="oleos"> 
+                    <div class="evidence-button">
                         <button class="button" type="button">Conheça mais</button>
                     </div>
                 </div>
