--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
     <header class="topo">
         <nav class="navegacao">
-            <a href="index.html"><img src="imagens/logo.png"alt="logo" height="100" width="100"></a> 
+            <a href="index.html"><img class="zoom" src="imagens/logo.png"alt="logo" height="100" width="100"></a> 
          </nav>
     </header>
 
